src/objects/Orchestrator_Execution_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cross_job_tracking_data__c</fullName>
        <label>Cross-job tracking data:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_job__c</fullName>
        <label>Current job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_job_tracking_data__c</fullName>
        <label>Current job tracking data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_run_Id__c</fullName>
        <label>Current run Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fail count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_queue__c</fullName>
        <label>Job queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jobs_executed__c</fullName>
        <label>Jobs executed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Orchestrator Execution Settings</label>
</CustomObject>